--- a/libs/textToImage/base.html
+++ b/libs/textToImage/base.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 
 <body>
-	<div class="box">
-		<div class="subHeader">
-			<img class="subImg" src="%%subIcon%%" />
-			<p class="subName">r/%%subName%%</p>
-		</div>
-		<p class="title">%%title%%</p>
+	<div class="helper">
+		<div class="box">
+			<div class="subHeader">
+				<img class="subImg" src="%%subIcon%%" />
+				<p class="subName">%%subName%%</p>
+			</div>
+			<p class="title">%%title%%</p>
 
+		</div>
 	</div>
 </body>
 <style>
@@ -28,43 +30,76 @@
 		padding: 0;
 	}
 
+	/*
+	.helper {
+		margin: 0;
+		padding: 0;
+		
+		--helper-heigth: 1920px;
+		--helper-width: 1080px;
+		height: var(--helper-heigth);
+		width: var(--helper-width);
+
+		border: solid red 1px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+	*/
+
 	.box {
 		background-color: rgb(255, 255, 255);
+		--box-width: 850px;
+		width: var(--box-width);
+		max-height: 800px;
+		padding-bottom: 10px;
 
-		width: 700px;
-		max-height: 600px;
+		border-radius: 50px;
+
+		/* shadow
+		box-shadow: 10px 10px 50px -10px rgba(120,120,120,0.5);
+		*/
+
 	}
 
 	.subHeader {
-		margin: 10px;
-		margin-top: 5px;
-		display: flex;
-		height: 75px;
-
+		height: 150px;
+		padding-bottom: 0px;
 		border-bottom: solid black 1px;
+		width: var(--box-width);
 	}
 
 	.subImg {
-		height: 50px;
-		align-self: center;
-		margin: 5px;
+		height: 100px;
+		width: 100px;
+		padding: 0;
+		margin: 25px;
+		margin-left: 45px;
+		border: black 1px solid;
+		border-radius: 50%;
 	}
 
 	.subName {
-		font-size: 20px;
+		font-size: 40px;
 		font-family: Helvetica;
 		font-weight: bold;
-		align-self: center;
-		margin-left: 5px;
+
+		margin: 0;
+		padding: 0;
+		position: absolute;
+		top: 60px;
+		left: 145px;
+		padding-left: 30px;
 	}
 
 	.title {
-		font-size: 35px;
+		font-size: 50px;
 		font-family: Helvetica;
 		font-weight: bold;
 		align-self: center;
 
 		margin: 25px;
-		margin-top: 10px;
+		margin-top: 30px;
 	}
 </style>
